--- a/.gitignore
+++ b/.gitignore
@@ -29,7 +29,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# env files (can opt-in for committing if needed)
+# local env files
 .env*
 
 # vercel
@@ -38,7 +38,4 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
-.env*
-.next
-node_modules
 
